--- a/src/App.css
+++ b/src/App.css
@@ -43,3 +43,13 @@ cr_commandbar {
   margin-top: 30px; 
   width: 80%
 }
+
+.cr_checkbox{
+
+  margin-left: auto;
+  margin-right: 20px;
+  margin-top:20px; 
+  margin-bottom:20px; 
+  text-align: center;
+  display: inline
+}
